<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.ru426.android.xposed.gxmod_extender"
    xmlns:xSeekBarPreferece="http://schemas.android.com/apk/res/com.ru426.android.xposed.gxmod_extender" >

    <PreferenceCategory
        android:summary="@string/brightness_settings_summary"
        android:title="@string/brightness_settings_title" >
        <CheckBoxPreference
            android:key="@string/is_hook_brightness_key"
            android:summary="@string/is_hook_brightness_summary"
            android:title="@string/is_hook_brightness_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/flashlight_settings_summary"
        android:title="@string/flashlight_settings_title" >
        <CheckBoxPreference
            android:key="@string/is_hook_flashlight_key"
            android:summary="@string/is_hook_flashlight_summary"
            android:title="@string/is_hook_flashlight_title" />

         <ListPreference
             android:entries="@array/flashlight_action_text_list"
             android:entryValues="@array/flashlight_action_value_list"
             android:key="@string/hook_flashlight_target_key"
             android:summary="@string/hook_flashlight_target_summary"
             android:title="@string/hook_flashlight_target_title" />

        <CheckBoxPreference
            android:key="@string/hook_flashlight_collapse_key"
            android:summary="@string/hook_flashlight_collapse_summary"
            android:title="@string/hook_flashlight_collapse_title" />
    </PreferenceCategory>

</PreferenceScreen>